Answer to reviewer and some corrections

--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1832,10 +1832,7 @@
 @Inbook{Dubslaff2015,
   author =	 "Dubslaff, Clemens and Baier, Christel and
                   Kl{\"u}ppelholz, Sascha",
-  title =	 "Probabilistic Model Checking for Feature-Oriented
-                  Systems",
-  bookTitle =	 "Transactions on Aspect-Oriented Software Development
-                  XII",
+  title =	 "Probabilistic Model Checking for Feature-Oriented Systems. Transactions on Aspect-Oriented Software Development XII",
   year =	 2015,
   publisher =	 "Springer Berlin Heidelberg",
   address =	 "Berlin, Heidelberg",
