--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1832,6 +1832,8 @@
 @Inbook{Dubslaff2015,
   author =	 "Dubslaff, Clemens and Baier, Christel and
                   Kl{\"u}ppelholz, Sascha",
+  editor =	 "Chiba, Shigeru and Tanter, {\'E}ric and Ernst, Erik
+                  and Hirschfeld, Robert",
   title =	 "Probabilistic Model Checking for Feature-Oriented
                   Systems",
   bookTitle =	 "Transactions on Aspect-Oriented Software Development
@@ -1880,7 +1882,7 @@ doi = {10.1145/2499777.2500725}
  location = {Wellington, New Zealand},
  pages = {638--652},
  numpages = {15},
-}
+}  
 
 @inproceedings{jhfes12,
  author = {Johansen, Martin Fagereng and Haugen, \Oystein and Fleurey, Franck and Eldegard, Anne Grete and Syversen, Torbj{\o}rn},
@@ -1905,3 +1907,5 @@ pages={203-204},
 doi={10.1109/QEST.2012.14},
 ISSN={},
 month={Sept},}
+
+
