--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,8 @@
 \input{conclussions}
 
 
-\bibliographystyle{splncs03}
+%\bibliographystyle{splncs03}
+\bibliographystyle{ieeetr}
 \bibliography{concu,concuPL}
 \newpage
 
