--- a/testing.tex
+++ b/testing.tex
@@ -11,7 +11,8 @@ in the product line, which allows us to calculate those products that can be gen
 
 This section presents the results obtained from an experimental study to show the applicability and scalability of our
 approach. In order to carry out this study, we have developed a tool to implement the denotational semantics of the
-probabilistic extension presented in this paper. The source code of this tool is available at the main project site
+probabilistic extension presented in this paper. The source code of the
+scripts used in this section are available at the main project site
 \footnote{\url{http://ccamacho.github.io/phd/resources/03_splap.tar}}. In essence, we perform two experiments. 
 The former focuses on measuring the performance of our proposed implementation for processing a feature model. 
 The second experiment consists on analyzing the scalability of our proposed implementation. 
