--- a/testing.tex
+++ b/testing.tex
@@ -29,10 +29,10 @@ CPU E5-2670 @ 2.60GHz, 64 GB of RAM memory and Centos 7 Operating System.
 The study described in this section seeks to answer the following questions:
 
 \begin{itemize}
-	\item \textbf{RQ1}: Is it possible to translate current variability models to support probabilistic information?
-	\item \textbf{RQ2}: Is it possible to describe a formal framework that translates the current variability models
+	\item \textbf{RQ1}: Is it possible to translate current feature models to support probabilistic information?
+	\item \textbf{RQ2}: Is it possible to describe a formal framework that translates the current feature models
 	to probabilistic methods?
-	\item \textbf{RQ3}: What is the impact of applying probabilistic analysis methods to current variability models like FODA?
+	\item \textbf{RQ3}: What is the impact of applying probabilistic analysis methods to current feature models like \FODA?
 \end{itemize}
 
 
@@ -410,21 +410,33 @@ presented in previous works~\cite{acl13,clc16}.
 
 Following, we provide the answers to the research questions.
 
-\textbf{RQ1}: Is it possible to translate current variability models to support 
+\textbf{RQ1}: Is it possible to translate current feature models to support 
 probabilistic information?
 
 In order to ask this question we have implemented the denotational semantic
-of the probabilistic extension. Since our framework is based on FODA, we
+of the probabilistic extension. Since our framework is based on \FODA, we
 can state that the answer is yes, it is possible to translate current
-variability models, like FODA, to models supporting probabilistic
+feature models, like \FODA, to represent and support probabilistic
 information.
 
 \textbf{RQ2}: Is it possible to describe a formal framework that translates 
-the current variability models to probabilistic methods?
+the current feature models to probabilistic methods?
+
+General use models have been proposed to model variability in software
+product lines~\cite{tlll15, tllv15}, and specifically for feature-oriented
+systems~\cite{Dubslaff2015, Chrszon2018}.
+Thus all previous work has centered on
+generic representations, this research article is based on adding probabilistic
+information to a well-known feature model \FODA.
+Based on our previous results~\cite{acl13,clc16} together with the results
+presented in this research article it is possible to 
+describe a formal framework that translates 
+the current feature models to probabilistic methods.
+
 
 
 \textbf{RQ3}: What is the impact of applying probabilistic analysis methods 
-to current variability models like FODA?
+to current feature models like \FODA?
 
 In order to ask this question we carried out some experiments using
 our implementation of the denotational semantic \fodaPA~\cite{acl13}
