--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,8 @@
 \usepackage{stmaryrd}
 \usepackage{scalerel}
 \usepackage{cite}
+\usepackage{array}
+\usepackage[inline]{enumitem}
 \usepackage[colorinlistoftodos, textsize=tiny, shadow]{todonotes} %
 \def\review{\includegraphics[width=4em]{review.jpg}}
 
